--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -5,13 +5,19 @@
 @if (User.Identity.IsAuthenticated)
 {
     var allUserPermissions = User.FindFirst("UserPermission")?.Value ?? "";
-
-    //Tickets Permission
-    var canCreateTicket = allUserPermissions.Contains("|TICKET:CREATE");
-    var canViewTicket = allUserPermissions.Contains("|TICKET:VIEW");
-
+    var canViewTicket = allUserPermissions.Contains("|TICKETS:VIEW");
+    var canViewComments = allUserPermissions.Contains("|TICKETCOMMENT:VIEW");
+    var canViewCategories = allUserPermissions.Contains("|CATEGORIES:VIEW");
+    var canViewSubCategories = allUserPermissions.Contains("|SUBCATEGORIES:VIEW");
+    var canViewAudits = allUserPermissions.Contains("|AUDIT:VIEW");
+    var canViewUsers = allUserPermissions.Contains("|USERS:VIEW");
+    var canViewSystemCodes = allUserPermissions.Contains("|SYSTEMCODE:VIEW");
+    var canViewSystemCodeDetails = allUserPermissions.Contains("|SYSTEMCODEDETAIL:VIEW");
+    var canViewRoles = allUserPermissions.Contains("|SYSTEMROLE:VIEW");
+    var canViewDepartments = allUserPermissions.Contains("|DEPARTMENT:VIEW");
+    var canViewSystemTasks = allUserPermissions.Contains("|SYSTEMTASK:VIEW");
     //Dashboard Permission
-    var canViewDashboard = allUserPermissions.Contains("|DASHBOARD:VIEW");
+    var canViewDashboard = allUserPermissions.Contains("|Dash:VIEW");
 
 
 
@@ -32,7 +38,7 @@
     <!-- Tempusdominus Bootstrap 4 -->
     <link rel="stylesheet" href="~/AdminLTE/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
     <!-- iCheck -->
-    <link rel="stylesheet" href="~/AdminLTEplugins/icheck-bootstrap/icheck-bootstrap.min.css">
+    <link rel="stylesheet" href="~/AdminLTE/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
     <!-- JQVMap -->
     <link rel="stylesheet" href="~/AdminLTE/plugins/jqvmap/jqvmap.min.css">
     <!-- Theme style -->
@@ -47,8 +53,9 @@
     <link rel="stylesheet" href="~/AdminLTE/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="~/AdminLTE/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="~/css/HighCharts.css">
-    <!-- Required Stylesheets -->@* 
-    <link href="/path/to/font-awesome.css" rel="stylesheet"> *@
+    <!-- Custom Site Styles -->
+    <link rel="stylesheet" href="~/css/site.css">
+    <!-- Required Stylesheets -->
     <link href="~/css/hummingbird-treeview.min.css" rel="stylesheet">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -66,9 +73,9 @@
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
-
-                <li class="nav-link" style="color: white;">HELP DESKTOP MANAGEMENT SYSTEM</li>
-
+                <li class="nav-item">
+                    <span class="navbar-title">HELP DESK MANAGEMENT SYSTEM</span>
+                </li>
             </ul>
 
             <!-- Right navbar links -->
@@ -217,125 +224,146 @@
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
                              with font-awesome or any other icon font library -->
-                       
-                            <li class="nav-item menu-open">
-                                <a asp-controller="Home" asp-action="Index" class="nav-link active">
-                                    <i class="nav-icon fas fa-tachometer-alt"></i>
-                                    <p>
-                                        Dashboard
 
-                                    </p>
-                                </a>
+                        <li class="nav-item menu-open">
+                            <a asp-controller="Home" asp-action="Index" class="nav-link active">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>
+                                    Dashboard
+                                </p>
+                            </a>
+                        </li>
 
-                            </li>
+                        
+                        @if (canViewTicket)
+                        {
+                        <li class="nav-item">
+                            <a href="javascript:;" class="nav-link has-arrow">
+                                <i class="nav-icon fas fa-ticket-alt"></i>
+                                <p>
+                                    Tickets
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a asp-action="Index" asp-controller="Tickets" class="nav-link">
+                                        <i class="fas fa-clock nav-icon"></i>
+                                        <p>Recent Tickets</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="AssignedTickets" asp-controller="Tickets" class="nav-link">
+                                        <i class="fas fa-user-check nav-icon"></i>
+                                        <p>Assigned Tickets</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="ResolvedTickets" asp-controller="Tickets" class="nav-link">
+                                        <i class="fas fa-check-circle nav-icon"></i>
+                                        <p>Resolved Tickets</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="ClosedTickets" asp-controller="Tickets" class="nav-link">
+                                        <i class="fas fa-lock nav-icon"></i>
+                                        <p>Closed Tickets</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        }
 
-                            @if (canViewTicket)
-                            {
-                             <li class="nav-item">
-                                <a href="javascript:;" class="nav-link has-arrow">
-                                    <i class="nav-icon fas fa-ticket-alt"></i>
-                                    <p>
-                                        Tickets
-                                        <i class="right fas fa-angle-left"></i>
-                                    </p>
-                                </a>
-                                <ul class="nav nav-treeview">
-                                    <li class="nav-item" style="background-color: #001f3f;">
-                                        <a asp-action="Index" asp-controller="Tickets" class="nav-link">
-                                            <i class="fas fa-clock nav-icon"></i>
-                                            <p>Recent Tickets</p>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item" style="background-color: #001f3f;">
-                                        <a asp-action="AssignedTickets" asp-controller="Tickets" class="nav-link">
-                                            <i class="fas fa-user-check nav-icon"></i>
-                                            <p>Assigned Tickets</p>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item" style="background-color: #001f3f;">
-                                        <a asp-action="ResolvedTickets" asp-controller="Tickets" class="nav-link">
-                                            <i class="fas fa-check-circle nav-icon"></i>
-                                            <p>Resolved Tickets</p>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item" style="background-color: #001f3f;">
-                                        <a asp-action="ClosedTickets" asp-controller="Tickets" class="nav-link">
-                                            <i class="fas fa-lock nav-icon"></i>
-                                            <p>Closed Tickets</p>
-                                        </a>
-                                    </li>
-                                </ul>
-                             </li>
-                            }
+                       @*  @if (canViewComments) { *@
                         <li class="nav-item">
                             <a asp-controller="Comments" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-comments"></i>
                                 <p>Ticket Comments</p>
                             </a>
                         </li>
+                       @*  } *@
+                        @* 
 
+                        @if (canViewCategories) { *@
                         <li class="nav-item">
                             <a asp-controller="TicketCategories" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-tags"></i>
                                 <p>Ticket Categories</p>
                             </a>
                         </li>
+                    @*     } *@
 
+                    @*     @if (canViewSubCategories) { *@
                         <li class="nav-item">
                             <a asp-controller="TicketSubCategories" asp-action="SubCategories" class="nav-link">
                                 <i class="nav-icon fas fa-list-alt"></i>
                                 <p>Ticket Sub-Categories</p>
                             </a>
                         </li>
+@*                         } *@
 
+                       @*  @if (canViewAudits) { *@
                         <li class="nav-item">
                             <a asp-controller="AuditTrails" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-history"></i>
                                 <p>Audit Trails</p>
                             </a>
                         </li>
+                       @*  } *@
 
+                      @*   @if (canViewUsers) { *@
                         <li class="nav-item">
                             <a asp-controller="Users" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-users"></i>
                                 <p>System Users</p>
                             </a>
                         </li>
-
+                 @*        } *@
+@* 
+                        @if (canViewSystemCodes) { *@
                         <li class="nav-item">
                             <a asp-controller="SystemCodes" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-code"></i>
                                 <p>System Codes</p>
                             </a>
                         </li>
+                  @*       } *@
 
+                      @*   @if (canViewSystemCodeDetails) { *@
                         <li class="nav-item">
                             <a asp-controller="SystemCodeDetails" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-info-circle"></i>
                                 <p>System Codes Details</p>
                             </a>
                         </li>
+                    @*     } *@
 
+                      @*   @if (canViewRoles) { *@
                         <li class="nav-item">
                             <a asp-controller="Roles" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-user-shield"></i>
                                 <p>System Roles</p>
                             </a>
                         </li>
+                   @*      } *@
 
+                       @*  @if (canViewDepartments) { *@
                         <li class="nav-item">
                             <a asp-controller="Departments" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-building"></i>
                                 <p>Departments</p>
                             </a>
                         </li>
+                    @*     }  *@
 
+                    @*    @if (canViewSystemTasks) { *@
                         <li class="nav-item">
                             <a asp-controller="SystemTasks" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-tasks"></i>
                                 <p>System Tasks</p>
                             </a>
                         </li>
+                       @*  } *@
 
                         <li class="nav-item">
                             <a asp-controller="Cities" asp-action="Index" class="nav-link">
@@ -371,15 +399,13 @@
                                 <p>Logout</p>
                             </a>
                         </li>
-
-                   
                     </ul>
-
                 </nav>
                 <!-- /.sidebar-menu -->
             </div>
             <!-- /.sidebar -->
         </aside>
+
 
 
         <!-- Content Wrapper. Contains page content -->
@@ -472,9 +498,8 @@
     <script src="~/AdminLTE/plugins/datatables-buttons/js/buttons.print.min.js"></script>
     <script src="~/AdminLTE/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 
-    <!-- Required Javascript -->@* 
-    <script src="/path/to/jquery.js"></script> *@
-    <script src="/js/hummingbird-treeview.min.js"></script>
+    <!-- Required Javascript -->
+    <script src="~/js/hummingbird-treeview.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/series-label.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
@@ -500,21 +525,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
